--- a/web/src/locales/en/privacy-policy.json
+++ b/web/src/locales/en/privacy-policy.json
@@ -5,7 +5,7 @@
 
     "section1": {
       "title": "§ 1. General provisions",
-      "p1": "The controller of personal data processed in connection with the use of the Flovers website and the Flovers mobile application is Marcin Janowski Copy Paste IT Solutions Kraków, with its registered address at ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Poland, e-mail address: info@flovers.app, hereinafter referred to as the “Controller”.",
+      "p1": "The controller of personal data processed in connection with the use of the Flovers website and the Flovers mobile application is Marcin Janowski Copy Paste IT Solutions, with its registered address at ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Poland, e-mail address: info@flovers.app, hereinafter referred to as the “Controller”.",
       "p2": "The Controller processes personal data in accordance with Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016 (GDPR).",
       "p3": "This Privacy Policy applies to the Flovers website, the Flovers mobile application (Android and, in the future, iOS), and the backend infrastructure associated with their operation."
     },
