--- a/web/src/locales/en/terms.json
+++ b/web/src/locales/en/terms.json
@@ -6,7 +6,7 @@
     "section1": {
       "title": "§ 1. General provisions",
       "p1": "These Terms of Service define the rules for using the Flovers website and the Flovers mobile application (Android and, in the future, iOS), as well as the conditions for providing electronic services by the Provider.",
-      "p2": "The Service is operated by Marcin Janowski Copy Paste IT Solutions Kraków, with its registered address at ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Poland, e-mail: info@flovers.app, hereinafter referred to as the “Provider”.",
+      "p2": "The Service is operated by Marcin Janowski Copy Paste IT Solutions, with its registered address at ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Poland, e-mail: info@flovers.app, hereinafter referred to as the “Provider”.",
       "p3": "By using the Service, including by creating an Account, logging in, or using any functionality of the application or website, the User accepts these Terms and undertakes to comply with them.",
       "p4": "In matters not regulated by these Terms, the applicable provisions of Polish law shall apply, in particular the Act on Providing Services by Electronic Means, the Civil Code, the Act on Consumer Rights, and relevant provisions of European Union law."
     },
