--- a/web/src/locales/pl/privacy-policy.json
+++ b/web/src/locales/pl/privacy-policy.json
@@ -5,7 +5,7 @@
 
     "section1": {
       "title": "§ 1. Postanowienia ogólne",
-      "p1": "Administratorem danych osobowych przetwarzanych w związku z korzystaniem z serwisu internetowego Flovers oraz aplikacji mobilnej Flovers jest Marcin Janowski Copy Paste IT Solutions Kraków, z siedzibą przy ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Polska, adres e-mail: info@flovers.app, zwany dalej „Administratorem”.",
+      "p1": "Administratorem danych osobowych przetwarzanych w związku z korzystaniem z serwisu internetowego Flovers oraz aplikacji mobilnej Flovers jest Marcin Janowski Copy Paste IT Solutions, z siedzibą przy ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Polska, adres e-mail: info@flovers.app, zwany dalej „Administratorem”.",
       "p2": "Administrator przetwarza dane osobowe zgodnie z Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. (RODO).",
       "p3": "Niniejsza Polityka Prywatności dotyczy serwisu internetowego Flovers, aplikacji mobilnej Flovers (Android, a w przyszłości iOS) oraz infrastruktury backendowej powiązanej z ich działaniem."
     },
