--- a/web/src/locales/pl/terms.json
+++ b/web/src/locales/pl/terms.json
@@ -6,7 +6,7 @@
     "section1": {
       "title": "§ 1. Postanowienia ogólne",
       "p1": "Niniejszy Regulamin określa zasady korzystania z serwisu internetowego Flovers oraz aplikacji mobilnej Flovers (Android, a w przyszłości iOS), a także warunki świadczenia usług drogą elektroniczną przez Usługodawcę.",
-      "p2": "Usługodawcą jest Marcin Janowski Copy Paste IT Solutions Kraków, ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Polska, e-mail: info@flovers.app (dalej: „Usługodawca”).",
+      "p2": "Usługodawcą jest Marcin Janowski Copy Paste IT Solutions, ul. płk. Francesco Nullo 30/115, 31-543 Kraków, Polska, e-mail: info@flovers.app (dalej: „Usługodawca”).",
       "p3": "Korzystając z Usługi (w tym poprzez rejestrację Konta, logowanie, używanie funkcji aplikacji lub serwisu), Użytkownik akceptuje Regulamin i zobowiązuje się go przestrzegać.",
       "p4": "W sprawach nieuregulowanych Regulaminem zastosowanie mają w szczególności: ustawa o świadczeniu usług drogą elektroniczną, Kodeks cywilny, ustawa o prawach konsumenta oraz inne właściwe przepisy prawa polskiego i prawa UE."
     },
